--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -23,15 +23,18 @@
         <div class="container">
             <div class="block-first">
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-4">
                         <div class="image-wrap">
                             <img src="/frontend/images/about/pho-01.jpg" alt="">
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-md-offset-1">
+                    <div class="col-md-7 col-md-offset-1">
                         <h4 class="lg text-uppercase">HEALTHY FOOD IS FUTURE</h4>
-                        <p>Venison spare ribs pork tail, beef meatloaf kielbasa turkey rump turducken beef ribs ground round sirloin kevin hamburger. Boudin ham hock chicken,. Leberkas ham sausage doner pastrami porchetta tri-tip boudin shankle. Meatball shoulder rump spare ribs tongue venison short ribs. Flank landjaeger brisket leberkas bacon kielbasa shank meatball, fatback t-bone pork biltong boudin. Hamburger strip steak ribeye pastrami tenderloin.</p>
+                        <h6 class="text-uppercase">Rind-Reisnudelsuppe (Vietnam's Nationalgericht)</h6>
+                        <h6 class="text-uppercase">Phở Bò / Main dish with Rice noodles soups !!!</h6>
+                        <p class="text-justify">In Vietnam wird sie in den vielen Garküchen auf den Strassen rund um die Uhr als Frühstück, Mittags- oder Nachtimbiss gegessen. Eine gute Phở Bò verlangt bei der Zubereitung viel Zeit und viele Zutaten. Das Geheimnis der Phở ist die Würzmischung, die jeder Suppenkoch anders zusammenstellt.</p>
+                        <p>Zutaten: Hausgemachte klare Rindbrühe mit breiten Reisnudeln, Rinderfilet, Zwiebeln, vietnamesischen Kräutern, Sojasprossen, dazu schmackhafte Rind-Bällchen.</p>
                     </div>
                 </div>
             </div>
@@ -40,27 +43,27 @@
                 <div class="row">
                     <div class="col-md-4 col-md-push-8">
                         <div class="row">
-                            <div class="col-xs-6">
+                            <div class="col-xs-6 col-sm-3 col-md-6">
                                 <div class="image-wrap">
-                                    <img src="images/about/img-2.jpg" alt="">
+                                    <img src="/frontend/images/temp/about-01.jpg" alt="">
                                 </div>
                             </div>
 
-                            <div class="col-xs-6">
+                            <div class="col-xs-6 col-sm-3 col-md-6">
                                 <div class="image-wrap">
-                                    <img src="images/about/img-3.jpg" alt="">
+                                    <img src="/frontend/images/temp/about-02.jpg" alt="">
                                 </div>
                             </div>
 
-                            <div class="col-xs-6">
+                            <div class="col-xs-6 col-sm-3 col-md-6">
                                 <div class="image-wrap">
-                                    <img src="images/about/img-4.jpg" alt="">
+                                    <img src="/frontend/images/temp/about-03.jpg" alt="">
                                 </div>
                             </div>
 
-                            <div class="col-xs-6">
+                            <div class="col-xs-6 col-sm-3 col-md-6">
                                 <div class="image-wrap">
-                                    <img src="images/about/img-5.jpg" alt="">
+                                    <img src="/frontend/images/temp/about-04.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -68,7 +71,8 @@
 
                     <div class="col-md-7 col-md-pull-4">
                         <h4 class="lg text-uppercase">WE MAKE ALSO OTHER MEAL</h4>
-                        <p>Venison spare ribs pork tail, beef meatloaf kielbasa turkey rump turducken beef ribs ground round sirloin kevin hamburger. Boudin ham hock chicken,. Leberkas ham sausage doner pastrami porchetta tri-tip boudin shankle. Meatball shoulder rump spare ribs tongue venison short ribs. Flank landjaeger brisket leberkas bacon kielbasa.</p>
+                        <p class="text-justify">In Vietnam wird sie in den vielen Garküchen auf den Strassen rund um die Uhr als Frühstück, Mittags- oder Nachtimbiss gegessen. Eine gute Phở Bò verlangt bei der Zubereitung viel Zeit und viele Zutaten. Das Geheimnis der Phở ist die Würzmischung, die jeder Suppenkoch anders zusammenstellt.</p>
+                        <p class="text-justify">Zutaten: Hausgemachte klare Rindbrühe mit breiten Reisnudeln, Rinderfilet, Zwiebeln, vietnamesischen Kräutern, Sojasprossen, dazu schmackhafte Rind-Bällchen.</p>
                         <%= link_to "See menu", {controller: "menu", action: "index"}, {class: "awe-btn awe-btn-2 awe-btn-default text-uppercase"} %>
                     </div>
                 </div>
