--- a/app/views/events/temp.html.erb
+++ b/app/views/events/temp.html.erb
@@ -36,7 +36,7 @@
                                 <div class="col-sm-8">
                                     <div class="item-event-body">
                                         <div class="item-event-title">
-                                            <h4>Phở Sài Gòn 52</h4>
+                                            <h4>Jazz Show: Mr. Special & Ms. Giant</h4>
                                         </div>
                                         <div class="item-event-content">
                                             <p>Doner filet mignon bacon corned beef rump, frankfurter sirloin brisket drumstick kielbasa ribeye boudin pancetta prosciutto.</p>
@@ -54,7 +54,79 @@
                             <div class="row">
                                 <div class="col-sm-4">
                                     <div class="image-wrap">
-                                        <img src="/frontend/images/temp/21.jpg" alt=""> 
+                                        <img src="/frontend/images/temp/1.jpg" alt=""> 
+                                    </div>
+                                </div>
+                                <div class="col-sm-8">
+                                    <div class="item-event-body">
+                                        <div class="item-event-title">
+                                            <h4><a href="#">Venison spare ribs pork tail</a></h4>
+                                        </div>
+                                        <div class="item-event-content">
+                                            <p>Flank landjaeger brisket leberkas bacon kielbasa shank meatball, fatback t-bone pork biltong boudin. Hamburger strip steak ribeye pastrami tenderloin.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- ITEM EVENT -->
+
+                    <!-- ITEM EVENT -->
+                    <li>
+                        <div class="item-event">
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="image-wrap">
+                                        <img src="images/events/img-3.jpg" alt=""> 
+                                    </div>
+                                </div>
+                                <div class="col-sm-8">
+                                    <div class="item-event-body">
+                                        <div class="item-event-title">
+                                            <h4><a href="#">Hamburger strip steak ribeye pastrami tenderloin.</a></h4>
+                                        </div>
+                                        <div class="item-event-content">
+                                            <p>Boudin ham hock chicken,. Leberkas ham sausage doner pastrami porchetta tri-tip boudin shankle. Meatball shoulder rump spare ribs tongue venison short ribs.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- ITEM EVENT -->
+
+                    <!-- ITEM EVENT -->
+                    <li>
+                        <div class="item-event">
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="image-wrap">
+                                        <img src="images/events/img-1.jpg" alt=""> 
+                                    </div>
+                                </div>
+                                <div class="col-sm-8">
+                                    <div class="item-event-body">
+                                        <div class="item-event-title">
+                                            <h4><a href="#">Jazz Show: Mr. Special & Ms. Giant</a></h4>
+                                        </div>
+                                        <div class="item-event-content">
+                                            <p>Doner filet mignon bacon corned beef rump, frankfurter sirloin brisket drumstick kielbasa ribeye boudin pancetta prosciutto.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- ITEM EVENT -->
+
+                    <!-- ITEM EVENT -->
+                    <li>
+                        <div class="item-event">
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="image-wrap">
+                                        <img src="images/events/img-2.jpg" alt=""> 
                                     </div>
                                 </div>
                                 <div class="col-sm-8">
@@ -80,9 +152,10 @@
                         <div class="event-pager-scroll">
                             <div class="event-pager">
                                 <a data-slide-index="0" href="#"><img src="/frontend/images/temp/14.jpg" alt=""></a>
-                                <a data-slide-index="1" href="#"><img src="/frontend/images/temp/16.jpg" alt=""></a>
-                                <a data-slide-index="2" href="#"><img src="/frontend/images/temp/19.jpg" alt=""></a>
-                                <a data-slide-index="3" href="#"><img src="/frontend/images/temp/22.jpg" alt=""></a>
+                                <a data-slide-index="1" href="#"><img src="images/events/img-thumb-2.jpg" alt=""></a>
+                                <a data-slide-index="2" href="#"><img src="images/events/img-thumb-3.jpg" alt=""></a>
+                                <a data-slide-index="3" href="#"><img src="images/events/img-thumb-1.jpg" alt=""></a>
+                                <a data-slide-index="4" href="#"><img src="images/events/img-thumb-2.jpg" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -98,37 +171,49 @@
         <div class="gallery-slider">
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
-                <img src="/frontend/images/temp/11.jpg" alt="">
+                <a href="images/background/img-1.jpg">
+                    <img src="images/events/img-1.jpg" alt="">
+                </a>
             </div>
             <!-- END / GALLERY ITEM -->
 
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
-                <img src="/frontend/images/temp/1.jpg" alt="">
+                <a href="images/background/img-1.jpg">
+                    <img src="images/events/img-2.jpg" alt="">
+                </a>
             </div>
             <!-- END / GALLERY ITEM -->
 
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
-                <img src="/frontend/images/temp/3.jpg" alt="">
+                <a href="images/background/img-1.jpg">
+                    <img src="images/events/img-3.jpg" alt="">
+                </a>
             </div>
             <!-- END / GALLERY ITEM -->
 
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
-                <img src="/frontend/images/temp/4.jpg" alt="">
+                <a href="images/background/img-1.jpg">
+                    <img src="images/events/img-1.jpg" alt="">
+                </a>
             </div>
             <!-- END / GALLERY ITEM -->
 
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
-                <img src="/frontend/images/temp/5.jpg" alt="">
+                <a href="images/background/img-1.jpg">
+                    <img src="images/events/img-2.jpg" alt="">
+                </a>
             </div>
             <!-- END / GALLERY ITEM -->
 
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
-                <img src="/frontend/images/temp/10.jpg" alt="">
+                <a href="images/background/img-1.jpg">
+                    <img src="images/events/img-3.jpg" alt="">
+                </a>
             </div>
             <!-- END / GALLERY ITEM -->
 
