--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -18,8 +18,8 @@
                 <li><%= link_to "About", {controller: "about", action: "index"} %></li>
                 <li><%= link_to "Menu", {controller: "menu", action: "index"} %></li>
                 <li><%= link_to "Reservation", {controller: "reservation", action: "index"} %></li>
-                <li><%= link_to "Catering", "#" %></li>
-                <li><%= link_to "Events", {controller: "blog", action: "index"} %></li>
+                <li><%= link_to "Catering", {controller: "catering", action: "index"} %></li>
+                <li><%= link_to "News", {controller: "news", action: "index"} %></li>
                 <li><%= link_to "Contact", {controller: "contact", action: "index"} %></li>
             </ul>
             <!-- END / NAV -->
