--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,55 +23,57 @@
             <ul class="home-slider" data-background="awe-static">
                 <li>
                     <div class="image-wrap">
-                        <img src="images/background/img-1.jpg" alt="">
+                        <img src="/frontend/images/temp/slideshow-01.jpg" alt="">
                     </div>
                     <div class="slider-content text-center">
                         <div class="home-content">
                             <div class="ribbon ribbon-1">
                                 <h2 class="sm">WELCOME TO</h2>
                             </div>
-                            <h1 class="sbig text-uppercase">Ambrosia</h1>
+                            <h1 class="sbig text-uppercase">PHỞ SÀI GÒN 52</h1>
                             <div class="awe-hr">
                                 <i class="icon awe_certificate"></i>
                             </div>
-                            <p class="xmd">Modern Restaurant &amp; Fast Food House</p>
+                            <p class="xmd">Zürcherstrasse 91, 8952 Schlieren, Switzerland</p>
+                            <p class="xmd">043 495 00 22</p>
                         </div>
                     </div>
                 </li>
 
                 <li>
                     <div class="image-wrap">
-                        <img src="images/slider/img-2.jpg" alt="">
+                        <img src="/frontend/images/temp/slideshow-02.jpg" alt="">
                     </div>
                     <div class="slider-content text-center">
                         <div class="home-content">
                             <div class="ribbon ribbon-1">
                                 <h2 class="sm">WELCOME TO</h2>
                             </div>
-                            <h1 class="sbig text-uppercase">Ambrosia</h1>
+                            <h1 class="sbig text-uppercase">PHỞ SÀI GÒN 52</h1>
                             <div class="awe-hr">
                                 <i class="icon awe_certificate"></i>
                             </div>
-                            <p class="xmd">Modern Restaurant &amp; Fast Food House</p>
+                            <p class="xmd">Zürcherstrasse 91, 8952 Schlieren, Switzerland</p>
+                            <p class="xmd">043 495 00 22</p>
                         </div>
                     </div>
-
                 </li>
 
                 <li>
                     <div class="image-wrap">
-                        <img src="images/slider/img-3.jpg" alt="">
+                        <img src="/frontend/images/temp/slideshow-03.jpg" alt="">
                     </div>
                     <div class="slider-content text-center">
                         <div class="home-content">
                             <div class="ribbon ribbon-1">
                                 <h2 class="sm">WELCOME TO</h2>
                             </div>
-                            <h1 class="sbig text-uppercase">Ambrosia</h1>
+                            <h1 class="sbig text-uppercase">PHỞ SÀI GÒN 52</h1>
                             <div class="awe-hr">
                                 <i class="icon awe_certificate"></i>
                             </div>
-                            <p class="xmd">Modern Restaurant &amp; Fast Food House</p>
+                            <p class="xmd">Zürcherstrasse 91, 8952 Schlieren, Switzerland</p>
+                            <p class="xmd">043 495 00 22</p>
                         </div>
                     </div>
                 </li>
