--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -54,13 +54,61 @@
                             <div class="row">
                                 <div class="col-sm-4">
                                     <div class="image-wrap">
+                                        <img src="/frontend/images/temp/17.jpg" alt=""> 
+                                    </div>
+                                </div>
+                                <div class="col-sm-8">
+                                    <div class="item-event-body">
+                                        <div class="item-event-title">
+                                            <h4>Gỏi cuốn Việt Nam</h4>
+                                        </div>
+                                        <div class="item-event-content">
+                                            <p>Flank landjaeger brisket leberkas bacon kielbasa shank meatball, fatback t-bone pork biltong boudin. Hamburger strip steak ribeye pastrami tenderloin.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- ITEM EVENT -->
+                    
+                    <!-- ITEM EVENT -->
+                    <li>
+                        <div class="item-event">
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="image-wrap">
+                                        <img src="/frontend/images/temp/20.jpg" alt=""> 
+                                    </div>
+                                </div>
+                                <div class="col-sm-8">
+                                    <div class="item-event-body">
+                                        <div class="item-event-title">
+                                            <h4>Bún bò nướng</h4>
+                                        </div>
+                                        <div class="item-event-content">
+                                            <p>Flank landjaeger brisket leberkas bacon kielbasa shank meatball, fatback t-bone pork biltong boudin. Hamburger strip steak ribeye pastrami tenderloin.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- ITEM EVENT -->
+                    
+                    <!-- ITEM EVENT -->
+                    <li>
+                        <div class="item-event">
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="image-wrap">
                                         <img src="/frontend/images/temp/21.jpg" alt=""> 
                                     </div>
                                 </div>
                                 <div class="col-sm-8">
                                     <div class="item-event-body">
                                         <div class="item-event-title">
-                                            <h4><a href="#">Venison spare ribs pork tail</a></h4>
+                                            <h4>Heo nướng</h4>
                                         </div>
                                         <div class="item-event-content">
                                             <p>Flank landjaeger brisket leberkas bacon kielbasa shank meatball, fatback t-bone pork biltong boudin. Hamburger strip steak ribeye pastrami tenderloin.</p>
@@ -96,11 +144,6 @@
     <!-- EVENTS GALLERY -->
     <section id="events-gallery" class="events-gallery section">
         <div class="gallery-slider">
-            <!-- GALLERY ITEM -->
-            <div class="gallery-item">
-                <img src="/frontend/images/temp/11.jpg" alt="">
-            </div>
-            <!-- END / GALLERY ITEM -->
 
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
@@ -117,18 +160,6 @@
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
                 <img src="/frontend/images/temp/4.jpg" alt="">
-            </div>
-            <!-- END / GALLERY ITEM -->
-
-            <!-- GALLERY ITEM -->
-            <div class="gallery-item">
-                <img src="/frontend/images/temp/5.jpg" alt="">
-            </div>
-            <!-- END / GALLERY ITEM -->
-
-            <!-- GALLERY ITEM -->
-            <div class="gallery-item">
-                <img src="/frontend/images/temp/10.jpg" alt="">
             </div>
             <!-- END / GALLERY ITEM -->
 
