--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -17,15 +17,6 @@
         <%= render "home/header" %>
     <!-- END / HEADER -->
 
-    <!-- SUB BANNER -->
-    <section class="sub-banner text-center section">
-        <div class="awe-parallax bg-3"></div>
-        <div class="awe-title awe-title-3">
-            <h3 class="lg text-uppercase">Contact</h3>
-        </div>
-    </section>
-    <!-- END / SUB BANNER -->
-
     <!-- CONTACT US -->
     <section id="contact" class="contact section">
 
@@ -84,10 +75,11 @@
                                 <hr class="_hr">
                                 <address class="address-wrap">
                                     <span class="phone">PHỞ SÀI GÒN 52</span>
-                                    <span class="address">Zürcherstrasse 91, 8952 Schlieren, Switzerland</span>
-                                    <span class="address">Telefon: 043 495 00 22 - Fax: 043 495 00 22</span>
+                                    <span class="color-white">Zürcherstrasse 91, 8952 Schlieren, Switzerland</span>
                                     <span class="address">Email: phosaigon52@gmail.com</span>
                                     <span class="address">Website: phosaigon52.ch</span>
+                                    <span class="address">Telefon: 043 495 00 22</span>
+                                    <span class="address">Fax: 043 495 00 22</span>
                                 </address>
                             </div>
 
