update logo and 3 pics news page

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -144,22 +144,40 @@
     <!-- EVENTS GALLERY -->
     <section id="events-gallery" class="events-gallery section">
         <div class="gallery-slider">
-
+            
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
-                <img src="/frontend/images/temp/1.jpg" alt="">
+                <img src="/frontend/images/temp/news-01.jpg" alt="">
+            </div>
+            <!-- END / GALLERY ITEM -->
+            
+            <!-- GALLERY ITEM -->
+            <div class="gallery-item">
+                <img src="/frontend/images/temp/news-02.jpg" alt="">
+            </div>
+            <!-- END / GALLERY ITEM -->
+            
+            <!-- GALLERY ITEM -->
+            <div class="gallery-item">
+                <img src="/frontend/images/temp/news-03.jpg" alt="">
+            </div>
+            <!-- END / GALLERY ITEM -->
+            
+            <!-- GALLERY ITEM -->
+            <div class="gallery-item">
+                <img src="/frontend/images/temp/news-04.jpg" alt="">
             </div>
             <!-- END / GALLERY ITEM -->
 
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
-                <img src="/frontend/images/temp/3.jpg" alt="">
+                <img src="/frontend/images/temp/news-05.jpg" alt="">
             </div>
             <!-- END / GALLERY ITEM -->
 
             <!-- GALLERY ITEM -->
             <div class="gallery-item">
-                <img src="/frontend/images/temp/4.jpg" alt="">
+                <img src="/frontend/images/temp/news-06.jpg" alt="">
             </div>
             <!-- END / GALLERY ITEM -->
 
