--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -8,10 +8,11 @@
     </ul>
 </li>
 <li>
-    <a href="#"><i class="icon-stack"></i> <span>Order & Reservation</span></a>
+    <a href="#"><i class="icon-stack"></i> <span>Order, Reservation & Contact</span></a>
     <ul>
         <li><a href="#">Orders Management</a></li>
         <li><%= link_to "Reservations Management", admin_reservations_path %></li>
+        <li><%= link_to "Contacts Management", admin_contacts_path %></li>
     </ul>
 </li>
 <li>
