--- a/app/views/admin/main/index.html.erb
+++ b/app/views/admin/main/index.html.erb
@@ -54,7 +54,21 @@
             <!-- /page header -->
 
             <!-- Content area -->
-                
+            <div class="content">
+
+                <!-- Dashboard content -->
+                <div class="row">
+                    <div class="col-lg-12">
+        
+                        <h1 class="text-center text-danger">WELCOME MANAGEMENT SYSTEM</h1>
+                        
+                        <h2 class="text-center text-success">PHỞ SÀI GÒN 52</h2>
+        
+                    </div>
+                </div>
+                <!-- /dashboard content -->
+        
+            </div>
             <!-- /content area -->
 
         </div>
