--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -86,7 +86,7 @@
                                     <td><%= link_to item.customer_name, [:admin, item] %></td>
                                     <td><%= item.customer_phone %></td>
                                     <td><%= item.customer_email %></td>
-                                    <td><%= item.time_order %></td>
+                                    <td><%= item.time_order.strftime("%m/%d/%Y - %I:%M")  %></td>
                                     <td><%= truncate(strip_tags(item.note), length: 50) %></td>
                                     <td><%= item.created_at.strftime("%d/%m/%Y") %></td>
                                     <td class="text-center">
