--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -39,21 +39,20 @@
                     </div>
                     <div class="col-md-8">
                         <div class="form-row">
-                            <form id="send-message-form" action="processContact.php" method="post">
+                            <%= form_for @contact, url: admin_contacts_path do |f| %>
                                 <div class="form-item form-textarea">
-                                    <textarea placeholder="Your Message" name="message"></textarea>
+                                    <%= f.text_area :message, placeholder: 'Your Message (*)', required: true %>
                                 </div>
                                 <div class="form-item form-type-name">
-                                    <input type="text" placeholder="Your Name" name="name">
+                                    <%= f.text_field :name, placeholder: 'Your Name (*)', required: true %>
                                 </div>
                                 <div class="form-item form-type-email">
-                                    <input type="text" placeholder="Your Email" name="email">
+                                    <%= f.email_field :email, placeholder: 'Your Email (*)', required: true %>
                                 </div>
                                 <div class="form-actions">
-                                    <input type="submit" value="Send message" class="awe-btn awe-btn-2 awe-btn-default text-uppercase">
+                                    <%= f.submit 'Send message', class: 'awe-btn awe-btn-2 awe-btn-default text-uppercase' %>
                                 </div>
-                                <div id="contact-content"></div>
-                            </form>
+                            <% end %>
                         </div>
                     </div>
                 </div>
