--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Phở Sài Gòn 52 - Management</title>
+	<title>Manage - Phở Sài Gòn 52</title>
 
 	<!-- Global stylesheets -->
     <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' %>
@@ -22,6 +22,9 @@
 	<%= csrf_meta_tags %>
 
 	<!-- /js and meta for rails -->
+	
+	<!-- Favicons -->
+    <%= favicon_link_tag '/backend/assets/images/logo-PhoSG52.png', rel: 'icon', type: 'image/png' %>
 
 	<!-- Core JS files -->
     <%= javascript_include_tag '/backend/assets/js/plugins/loaders/pace.min.js' %>
